replace old java features with java 17